--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@astrojs/check": "^0.9.2",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.13.3",
+    "mixitup": "^3.3.1",
     "tailwindcss": "^3.4.9",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.30"
   }
 }
